--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -10,7 +10,7 @@
             <a href="/carts/list"><i class="pi pi-shopping-cart" style="font-size: 2rem"></i></a>
         </div>
         <div class="lout">
-            <a href="#"><i class="pi pi-sign-out" style="font-size: 2rem"></i></a>
+            <a href="/login" (click)="deconnexion()"><i class="pi pi-sign-out" style="font-size: 2rem"></i></a>
         </div>
     </div>
 </p-toolbar>
